--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
  <head>
   <meta charset="utf-8">
   <title>My First Bitstarter</title>
-  <link type="text/css" rel="stylesheet"
-  		href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+  <meta name="viewport" content="width-device-width, initial-scale-1.0">
+  <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+
   <style type="text/css">
+   /* Large desktpo */
+   @media (min-width: 980px) {
+   	body {
+   		padding-top: 60px;
+   	}
+   	.linediv-l {
+   		border-right: 1px white solid;
+   	}
+   	.linedir-r {
+   		border-left: 1px white solid;
+   	}
+
+   }
+
+   /* landscape phones and down */
+   @media (min-width: 480px) {
+   	.copy {
+   		padding: 2.5% 10%;
+   	}
+   	.linediv-l {
+   		border-bottom: 1px white solid;
+   	}
+   	.linedir-r {
+   		border-top: 1px white solid;
+   	}   	
+   }
+
+   /* All form factors */
+
+   /* Main body and headings */
+
    body {
    	padding-top: 20px;
    	padding-bottom: 40px;
@@ -38,30 +70,43 @@
    }
   </style>
  </head>
+
  <body>
+ 	<div class="navbar navbar-inverse navbar-fixed-top">
+ 	 <div class="navbar-inner">
+	 	<div class="container">
+		 	<button type="button" class="btn btn-navbar"
+		 				data-toggle="collapse" data-target=".nav-collapse">
+		 		<span class="icon-bar"></span>
+		 		<span class="icon-bar"></span>
+		 		<span class="icon-bar"></span>
+		 	</button>
+		 	<a class="brand" href="#">Bitstarter</a>
+		 	<div clsas="nav-collapse collapse">
+		 		<ul class="nav">
+		 			<li class="active"><a href="#">Home</a></li>
+		 			<li ><a href="#about">About</a></li>
+					<li ><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	 </div>
+	</div>
+
+	
  	<div class="container">
- 	 <div class="row navigation">
- 	  <div class="span2 logo">
- 	   Logo
- 	  </div>
- 	  <div class="span6 blank">
- 	   Blank
- 	  </div>
- 	  <div class="span4 about">
- 	   About
- 	  </div>
- 	 </div>
- 	 <div clas="row heading">
+ 	 <div clas="row-fluid heading">
  	  <div class="span12">
  	   <h1>Bitstarter Title</h1>
  	  </div>
  	 </div>
- 	<div class="row subheading">
- 	 <div class="span12">
- 	  <p class="lead">This is my first bitstarter change.</p>
- 	 </div>
- 	</div>
- 	<div class="row pitch">
+
+ 	<div class="row-fluid subheading">
+ 	  <div class="span12">
+ 	   <p class="lead">This is my first bitstarter change.</p>
+ 	  </div>
+
+ 	   <div class="row-fluid pitch">
  		<div class="span6 video">
  			Video
  		</div>
@@ -77,27 +122,29 @@
  		 </div>
  		</div>
  	   </div>
- 	   <div class="row section1">
+ 	  
+ 	   <div class="row-fluid section1">
  	    <div class="span12">
  	     Marketing Section 1
  	    </div>
  	   </div>
- 	   <div class="row section2">
+ 	   <div class="row-fluid section2">
  	    <div class="span12">
  	     Marketing Section 2
  	    </div>
  	   </div> 	   
- 	   <div class="row faq">
+ 	   <div class="row-fluid faq">
  	    <div class="span12">
  	     FAQ
  	    </div>
  	   </div>
- 	   <div class="row footer">
+ 	   <div class="row-fluid footer">
  	    <div class="span12">
  	     Footer
  	    </div>
  	   </div> 	
  	  </div>
  	</div>
+ 
  </body>
 </html>
