--- a/index.html
+++ b/index.html
@@ -37,37 +37,24 @@
    /* All form factors */
 
    /* Main body and headings */
-
    body {
-   	padding-top: 20px;
-   	padding-bottom: 40px;
+   	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
    }
-   .container {
-   	width: 960px;
-   }
-   p.lead {
-   	padding-top: 15px;
-   }
-   .navigation, .pitch, .section1, .section2, .faq, .footer {
-   	.padding: 10px 0px 10px 0px;
-   }
-   .video, .thermometer, .order, .social {
-   	border: 1px dotted;
+   .heading, .subheading {
+   	font-family]: 'Ubuntu', Helvetica, Arial, sans-serif;
    	text-align: center;
    }
-   .video {
-   	/* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-   	height: 124px;
-   	line-height: 124px;
+   p.lead {
+   	padding-top: 1.5%;
+   	font-size: 24px;
+   	line-height: 24px;
    }
-   .thermometer, .order, .social {
-   	/* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html; */
-   	height: 40px;
-   	line-height: 40px;
+   p {
+   	font-size: 18px;
+   	line-height: 24px;
    }
-   div.row {
-   	border: 1px solid;
-   }
+   
+
   </style>
  </head>
 
