--- a/index.html
+++ b/index.html
@@ -53,7 +53,44 @@
    	font-size: 18px;
    	line-height: 24px;
    }
-   
+
+   /** Video pitch and Action */
+   .pitch {
+   	padding: 2.5% 0%;
+   }
+   .order {
+   	.padding: 2% 0%;
+   }
+   .actions {
+   	background-color: #343434;
+   	padding: 3% 0%;
+   }
+   .video, .thermometer, .order, .social, .statistics {
+   	text-align: center;
+   }
+   .statistics h3, .statistics p {
+   	color: white;
+   }
+
+   /* Marketing Copy and Fooer */
+   .copy {
+   	padding-top: 2.5%;
+   	padding-bottom: 2.5%;
+   	text-align: justify;
+   }
+   .asset {
+   	.padding: 2.5% 0%;
+   }
+   .footer {
+   	color: #cccccc;
+   	text-align: center;
+   }
+   .footer p {
+   	font-size: 11px;
+   }
+   .footer a {
+   	color: #ccccff;
+   }
 
   </style>
  </head>
@@ -90,7 +127,7 @@
 
  	<div class="row-fluid subheading">
  	  <div class="span12">
- 	   <p class="lead">This is my first bitstarter change.</p>
+ 	   <p class="lead">This is my first bitstarter project.</p>
  	  </div>
 
  	   <div class="row-fluid pitch">
