--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 		 		<span class="icon-bar"></span>
 		 	</button>
 		 	<a class="brand" href="#">Bitstarter</a>
-		 	<div clsas="nav-collapse collapse">
+		 	<div class="nav-collapse collapse">
 		 		<ul class="nav">
 		 			<li class="active"><a href="#">Home</a></li>
-		 			<li ><a href="#about">About</a></li>
-					<li ><a href="#contact">Contact</a></li>
+		 			<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -119,34 +119,54 @@
 
 	
  	<div class="container">
+
  	 <div clas="row-fluid heading">
  	  <div class="span12">
- 	   <h1>Bitstarter Title</h1>
+ 	   <h1>Product</h1>
  	  </div>
  	 </div>
 
  	<div class="row-fluid subheading">
  	  <div class="span12">
- 	   <p class="lead">This is my first bitstarter project.</p>
+ 	   <p class="lead">One sentence description.</p>
  	  </div>
+ 	</div>
 
- 	   <div class="row-fluid pitch">
- 		<div class="span6 video">
- 			Video
+ 	<div class="row-fluid pitch">
+ 		<div class="span5 offset1 video">
+ 			<img class="img polaroid" src="http://placehold.it/480x300">
  		</div>
- 		<div class="span6">
- 		 <div class="thermometer">
- 		  Thermometer
- 		 </div>
- 		 <div class="order">
- 		  Order
- 		 </div>
- 		 <div class="social">
- 		  Social
- 		 </div>
- 		</div>
- 	   </div>
- 	  
+ 	</div>
+
+ 	<div class="span5 actions">
+ 		<div class="span8 offset2">
+ 			<div class="statistics">
+ 				<div class="span4">
+ 					<div class="linediv-l">
+ 						<h3>1000</h3> <p>backers</p>
+ 					</div>
+ 				</div>
+ 				<div class="span4">
+ 					<div class="linediv-c">
+ 						<h3>$6000</h3> <p>of $10,000</p>
+ 					</div>
+ 				</div>
+ 				 <div class="span4">
+ 					<div class="linediv-r">
+ 						<h3>10</h3> <p>days left</p>
+ 					</div>
+ 				</div>
+ 			</div> 
+ 		</div> 
+ 	</div>
+
+ 	<div class="span10 offset1">
+ 		<div class="thermometer progress active">
+ 			<div class="bar bar-success" style="width: 60%;"></div>
+ 			<div class="bar bar-warning" style="width: 40%;"></div> 	
+ 		</div>		
+ 	</div>
+
  	   <div class="row-fluid section1">
  	    <div class="span12">
  	     Marketing Section 1
