--- a/index.html
+++ b/index.html
@@ -185,22 +185,28 @@
  		<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
   	</div>
 
+  	<div class="row-fluid section1">
+  		<div class="span5 offset1 asset">
+  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  		</div> 
+  		<div class="span5 copy">
+  			<p>
+  				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper eleifend pellentesque. Phasellus a volutpat enim. Sed feugiat bibendum justo, nec egestas justo convallis vitae. Nulla condimentum et risus eget ullamcorper. Aliquam a lacus vestibulum, iaculis magna a, porta neque. Sed fringilla orci sit amet tortor ultrices, eget volutpat ligula venenatis. Nunc sed elit ut libero accumsan convallis ut imperdiet felis. Aliquam sit amet dignissim mi. Cras at tristique risus. Donec placerat interdum dui facilisis iaculis.
+  			</p>
+  		</div>
+  	</div>
 
- 	   <div class="row-fluid section1">
- 	    <div class="span12">
- 	     Marketing Section 1
- 	    </div>
- 	   </div>
- 	   <div class="row-fluid section2">
- 	    <div class="span12">
- 	     Marketing Section 2
- 	    </div>
- 	   </div> 	   
- 	   <div class="row-fluid faq">
- 	    <div class="span12">
- 	     FAQ
- 	    </div>
- 	   </div>
+  	<div class="row-fluid section2">
+  		<div class="span5 offset1 copy copy-right">
+  			<p>
+  				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper eleifend pellentesque. Phasellus a volutpat enim. Sed feugiat bibendum justo, nec egestas justo convallis vitae. Nulla condimentum et risus eget ullamcorper. Aliquam a lacus vestibulum, iaculis magna a, porta neque. Sed fringilla orci sit amet tortor ultrices, eget volutpat ligula venenatis. Nunc sed elit ut libero accumsan convallis ut imperdiet felis. Aliquam sit amet dignissim mi. Cras at tristique risus. Donec placerat interdum dui facilisis iaculis.
+  			</p>
+  		</div>
+  		<div class="span5 asset">
+  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  		</div>   		
+  	</div>
+
  	   <div class="row-fluid footer">
  	    <div class="span12">
  	     Footer
