hw4 footer, some corrections from a compare

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  <head>
   <meta charset="utf-8">
   <title>My First Bitstarter</title>
-  <meta name="viewport" content="width-device-width, initial-scale-1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
@@ -15,12 +16,9 @@
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
           rel="stylesheet" type="text/css">
 
-  <link href="" type="text/css">
-  <link href="" type="text/css">
-
-
   <style type="text/css">
-   /* Large desktpo */
+
+   /* Large desktop */
    @media (min-width: 980px) {
    	body {
    		padding-top: 60px;
@@ -28,21 +26,21 @@
    	.linediv-l {
    		border-right: 1px white solid;
    	}
-   	.linedir-r {
+   	.linediv-r {
    		border-left: 1px white solid;
    	}
 
    }
 
-   /* landscape phones and down */
-   @media (min-width: 480px) {
+   /* Landscape phones and down */
+   @media (max-width: 480px) {
    	.copy {
    		padding: 2.5% 10%;
    	}
    	.linediv-l {
    		border-bottom: 1px white solid;
    	}
-   	.linedir-r {
+   	.linediv-r {
    		border-top: 1px white solid;
    	}   	
    }
@@ -54,25 +52,25 @@
    	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
    }
    .heading, .subheading {
-   	font-family]: 'Ubuntu', Helvetica, Arial, sans-serif;
+   	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
    	text-align: center;
    }
    p.lead {
    	padding-top: 1.5%;
    	font-size: 24px;
-   	line-height: 24px;
+   	line-height: 30px;
    }
    p {
    	font-size: 18px;
    	line-height: 24px;
    }
 
-   /** Video pitch and Action */
+   /* Video pitch and Action */
    .pitch {
    	padding: 2.5% 0%;
    }
    .order {
-   	.padding: 2% 0%;
+    padding: 2% 0%;
    }
    .actions {
    	background-color: #343434;
@@ -85,14 +83,14 @@
    	color: white;
    }
 
-   /* Marketing Copy and Fooer */
+   /* Marketing Copy and Footer */
    .copy {
    	padding-top: 2.5%;
    	padding-bottom: 2.5%;
    	text-align: justify;
    }
    .asset {
-   	.padding: 2.5% 0%;
+   	padding: 2.5% 0%;
    }
    .footer {
    	color: #cccccc;
@@ -133,7 +131,7 @@
 	
  	<div class="container">
 
- 	 <div clas="row-fluid heading">
+ 	 <div class="row-fluid heading">
  	  <div class="span12">
  	   <h1>Product</h1>
  	  </div>
@@ -147,7 +145,7 @@
 
  	<div class="row-fluid pitch">
  		<div class="span5 offset1 video">
- 			<img class="img polaroid" src="http://placehold.it/480x300">
+ 			<img class="img-polaroid" src="http://placehold.it/480x300">
  		</div>
  	</div>
 
@@ -164,30 +162,32 @@
  						<h3>$6000</h3> <p>of $10,000</p>
  					</div>
  				</div>
- 				 <div class="span4">
+ 				<div class="span4">
  					<div class="linediv-r">
  						<h3>10</h3> <p>days left</p>
  					</div>
  				</div>
  			</div> 
  		</div> 
- 	</div>
 
- 	<div class="span10 offset1">
- 		<div class="thermometer progress active">
- 			<div class="bar bar-success" style="width: 60%;"></div>
- 			<div class="bar bar-warning" style="width: 40%;"></div> 	
- 		</div>		
- 	</div>
+	 	<div class="span10 offset1">
+	 		<div class="thermometer progress active">
+	 			<div class="bar bar-success" style="width: 60%;"></div>
+	 			<div class="bar bar-warning" style="width: 40%;"></div> 	
+	 		</div>		
+	 	</div>
 
- 	<div class="span6 offset3 order">
- 		<button class="btn btn-success btn-large">Preorder</button>
- 	</div>
- 	<div class="span8 offset2 social">
- 		<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
- 		<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-  	</div>
+	 	<div class="span6 offset3 order">
+	 		<button class="btn btn-success btn-large">Preorder</button>
+	 	</div>
+	 	<div class="span8 offset2 social">
+	 		<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	 		<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	  	</div>
+	</div>
+	</div>
 
+ 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
   			<img class="img-polaroid" src="http://placehold.it/480x300">
